<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_height="match_parent"
    android:background="@color/colorPrimary"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">

        <ImageView
            android:src="@drawable/sigpic"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <View
            android:background="@color/scrim"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <android.support.v4.widget.NestedScrollView android:layout_height="match_parent"
            android:layout_width="match_parent"
            xmlns:android="http://schemas.android.com/apk/res/android" >
                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical" android:layout_width="match_parent"
                    android:paddingTop="12dp"
                    android:paddingRight="12dp"
                    android:paddingLeft="12dp"
                    android:layout_height="match_parent">
                    <android.support.design.widget.TextInputLayout
                                  android:textColorHint="@color/white"
                            android:id="@+id/signup_name_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                                <EditText
                                    android:singleLine="true"
                                    android:textColor="@color/white"
                                    android:layout_marginTop="12dp"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/sign_up_user_name"
                                    android:id="@+id/signup_user_name"
                                    android:layout_marginBottom="12dp"/>
                        </android.support.design.widget.TextInputLayout>

                              <android.support.design.widget.TextInputLayout                             android:textColorHint="@color/white"
                            android:id="@+id/signup_email_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                                <EditText
                                    android:singleLine="true"
                                    android:textColor="@color/white"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/sign_up_user_email"
                                    android:id="@+id/signup_user_email"
                                    android:layout_marginBottom="12dp"/>
                        </android.support.design.widget.TextInputLayout>

                              <android.support.design.widget.TextInputLayout                             android:textColorHint="@color/white"
                            android:id="@+id/signup_pass_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                                <EditText
                                    android:singleLine="true"
                                    android:inputType="textPassword"
                                    android:textColor="@color/white"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/sign_up_user_password"
                                    android:id="@+id/signup_user_pass"
                                    android:layout_marginBottom="12dp"/>
                        </android.support.design.widget.TextInputLayout>


                              <android.support.design.widget.TextInputLayout                             android:textColorHint="@color/white"
                            android:id="@+id/signup_phone_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                                <EditText
                                    android:singleLine="true"
                                    android:textColor="@color/white"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/sign_up_user_phone_number"
                                    android:id="@+id/signup_user_phone"
                                    android:layout_marginBottom="12dp"/>
                        </android.support.design.widget.TextInputLayout>

                                <Spinner
                                    android:padding="4dp"
                                    android:visibility="gone"
                                    android:background="@color/colorAccent"
                                    android:textColor="@color/white"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:prompt="@string/city"
                                    android:id="@+id/signup_user_city"
                                    />
                        <TextView
                            android:layout_marginLeft="24dp"
                            android:visibility="gone"
                            android:id="@+id/city_err"
                            android:textColor="#B33A3A"
                            android:text="@string/cant_be_empty"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />


                        <Spinner
                            android:layout_marginBottom="8dp"
                            android:padding="4dp"
                            android:visibility="gone"
                            android:background="@color/colorAccent"
                            android:textColor="@color/white"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:prompt="@string/job"
                            android:id="@+id/signup_user_job"
                            />
                        <TextView
                            android:layout_marginLeft="24dp"
                            android:visibility="gone"
                            android:id="@+id/job_err"
                            android:textColor="#B33A3A"
                            android:text="@string/cant_be_empty"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <Button
                            android:background="@drawable/accent_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sign_up_user_add_picture_button"
                            android:id="@+id/upload_img"
                            android:layout_gravity="center"
                            />
                    <TextView
                        android:layout_marginBottom="2dp"
                        android:layout_marginLeft="24dp"
                        android:visibility="gone"
                        android:id="@+id/img_err"
                        android:textColor="#B33A3A"
                        android:text="@string/cant_be_empty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <Button
                        android:visibility="gone"
                        android:background="@drawable/accent_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_station"
                        android:id="@+id/add_station"
                        android:layout_gravity="center"
                        />
                        <TextView
                            android:layout_marginBottom="2dp"
                            android:layout_marginLeft="24dp"
                            android:visibility="gone"
                            android:id="@+id/loc_err"
                            android:textColor="#B33A3A"
                            android:text="@string/cant_be_empty"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <Button
                            android:background="@drawable/accent_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sign_up_user_sign_up_button"
                            android:id="@+id/signup_user_btn"
                            android:layout_gravity="center"
                            android:layout_marginBottom="4dp"/>


                </LinearLayout>


        </android.support.v4.widget.NestedScrollView>

        <FrameLayout
            android:id="@+id/progressBarView"
            android:visibility="gone"
            android:background="#2A000000"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <android.support.v7.widget.CardView
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginRight="@dimen/spacing_large"
                    app:contentPaddingLeft="@dimen/padding_normal"
                    app:contentPaddingTop="@dimen/padding_dialog"
                    app:contentPaddingRight="@dimen/padding_dialog"
                    app:contentPaddingBottom="@dimen/padding_normal"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                        <TextView

                            android:id="@+id/txtPercentage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="15dp"
                            android:layout_marginTop="15dp"
                            android:textSize="30dp" />

                        <ProgressBar
                            android:layout_gravity="center"
                            android:id="@+id/progressBar"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="20dp"
                            android:layout_marginBottom="35dp"
                            android:visibility="gone"/>
                </android.support.v7.widget.CardView>
        </FrameLayout>

        <FrameLayout
            android:visibility="gone"
            android:clickable="true"
            android:id="@+id/loadingSpinner"
            android:elevation="12dp"
            android:background="@color/scrim"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <ProgressBar
                    android:layout_gravity="center"
                    android:id="@+id/progressBar1"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
        </FrameLayout>
</FrameLayout>