<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <ImageView
        android:src="@drawable/lo2"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <View
        android:background="@color/scrim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:layout_marginTop="48dp"
            android:adjustViewBounds="true"
            android:src="@drawable/craflogo"
            android:id="@+id/login_img"
            android:layout_height="wrap_content"
            android:layout_width="196dp"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
         >



            <android.support.design.widget.TextInputLayout
                android:textColorHint="@color/white"
                android:id="@+id/P_num_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_email_phone"
                    android:id="@+id/P_num"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:textColorHint="@color/white"
                android:id="@+id/pass_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:id="@+id/pass"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">


            <Button
                android:textColor="@color/white"
                android:background="@drawable/sec_btt"
                android:layout_weight="0.2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signup_btn"
                android:text="@string/login_sign_up_button"
                />
            <Button
                android:textColor="@color/black"
                android:background="@drawable/accent_btn"
                android:layout_weight="0.8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login_btn"
                android:text="@string/login_login_button" />



        </LinearLayout>


    </LinearLayout>
    <FrameLayout
        android:visibility="gone"
        android:clickable="true"
        android:id="@+id/loadingSpinner"
        android:elevation="12dp"
        android:background="@color/scrim"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_gravity="center"
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </FrameLayout>
</FrameLayout>