<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    android:layout_marginBottom="4dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/wss"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
 <LinearLayout
     android:layout_marginTop="8dp"
     android:layout_marginBottom="8dp"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/request_item_creator_img"
             android:layout_margin="8dp"
             android:src="@drawable/craftsmen"
             android:layout_width="60dp"
             android:layout_height="60dp" />
         <TextView
             android:textStyle="bold"
             android:textColor="@color/white"
             android:layout_marginRight="8dp"
             android:layout_marginLeft="8dp"
             android:id="@+id/request_item_creator_name"
             android:textSize="24sp"
             android:layout_gravity="center"
             android:text="عمر حاتم"
             android:gravity="left"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
 <FrameLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <ImageView
         android:adjustViewBounds="true"
         android:maxHeight="196dp"
         android:id="@+id/req_img"
         android:background="@color/colorPrimaryDarks"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </FrameLayout>

<LinearLayout
    android:gravity="center_vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/request_item_details"
        android:layout_width="80dp"
        android:layout_height="wrap_content" />
    <TextView

        android:text="desc"
        android:textColor="@color/gray300"

        android:id="@+id/request_item_desc"
        android:textSize="18sp"
        android:gravity="left|center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
<LinearLayout
    android:gravity="center_vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:layout_marginBottom="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/request_item_place"
        android:layout_width="80dp"
        android:layout_height="wrap_content" />
    <TextView

        android:text="desc"
        android:textColor="@color/gray300"

        android:id="@+id/request_item_loc"
        android:textSize="18sp"
        android:gravity="left|center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
<LinearLayout
    android:gravity="center_vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:layout_marginBottom="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView

        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/time"
        android:layout_width="80dp"
        android:layout_height="wrap_content" />
    <TextView

        android:text="desc"
        android:textColor="@color/gray300"

        android:id="@+id/request_item_time"
        android:textSize="18sp"
        android:gravity="left|center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>

 </LinearLayout>
</android.support.v7.widget.CardView>